# Flask-We-Make-You-Bake

./: README.md  app.py  auth.py  main.py  pyproject.toml
Website/: __init__.py  auth.py  extensions.py  models.py  recipes.py  remake_database.py  secret_key  views.py
Website/static/: styles.css
Website/templates/: base.html  index.html  login.html  sign_up.html
static/: styles.css
templates/: base.html  index.html
